src/components/topbar/Topbar.css
.data-time-select{
    width: 100%;
    margin-left: 4rem;
}

.dropdown-width {
    min-width: 35rem;
}

.gap-topbar {
    margin-right: 0.5rem;
}

.topbar {
    height: 65px;
    background-color: #ffffff;
    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
}

.topbar-button{
    color: #212529;
    background-color: #ffffff;
}

